--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+.image{
+  width: 300px;
+  height: 200px;
+  border-radius: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.slider{
+  position: relative;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.leftArrow{
+  position: absolute;
+  top: 50%;
+  left: 150px;
+  font-size: 5rem;
+  z-index: 10; /*เด้งมาอยู่ข้างหน้า*/
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rightArrow{
+  position: absolute;
+  top: 50%;
+  right: 150px;
+  font-size: 5rem;
+  z-index: 10; /*เด้งมาอยู่ข้างหน้า*/
+  cursor: pointer;
 }
