--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
+body{
+  background-color: #121312;
+  text-align: center;
+  font-size: 1.5rem;
+  color: white;
+  font-weight: 700;
+}
+
+
 .image{
-  width: 300px;
-  height: 200px;
+  width: 600px;
+  height: 400px;
   border-radius: 10px;
 }
 
@@ -28,4 +37,15 @@
   font-size: 5rem;
   z-index: 10; /*เด้งมาอยู่ข้างหน้า*/
   cursor: pointer;
+}
+
+.slide{
+  opacity: 0;
+  transition: 1s ease;
+}
+
+.slide.active{
+  opacity: 1;
+  transform: scale(1.08);
+  transition-duration: 1s;
 }
